Comment rule for overlong single line comments

--- a/C/C_style-guide.mkd
+++ b/C/C_style-guide.mkd
@@ -324,6 +324,20 @@ Comments
 	}
 	```
 
+*	For overlong, single line comments, break the comment into multiple lines so that they fit within the 80 spaces. Each line after the first gets indented same as the first, then filled with spaces so that the `//` line up. E.G.
+
+	```c
+	////////////////////////////////////////////////////////////////////////////////
+	int main (void) {
+		int e; // Element
+
+		for (e = 12; e < 24; ++e) { // 2 tabs
+			printf ("e = [%d]\n"); // 3 tabs: Nothing special about this comment,
+			                       // 3 tabs + 23 spaces: except that it is long
+			printf ("e != [%d]\n", e - 3); // 3 tabs
+		} // 2 tabs
+	```
+
 Organization
 ------------
 
